# Bitboard-ChessEngine

./: CMakeLists.txt  LICENSE  README.md
Header/: Bitmap.h  ChessBoard.h  Engine.h  Evaluator.h  Game.h  MagicNumberGenerator.h  MoveGenerator.h  MoveList.h  PerformanceTest.h  Terminal.h  TranspositionTable.h  UCI.h
Source/: Bitmap.cpp  ChessBoard.cpp  Engine.cpp  Evaluator.cpp  Game.cpp  MagicNumberGenerator.cpp  MoveGenerator.cpp  MoveList.cpp  PerformanceTest.cpp  Terminal.cpp  TranspositionTable.cpp  UCI.cpp  main.cpp
